# hsgames

./: .dir-locals.el  .gitignore  .stylish-haskell.yaml  Dockerfile  README.md  Subway.hs  acquire.cabal  backends.json  build.sh  err  hsgames.cabal  stack.yaml
acquire/: acquire.cabal
acquire/src/Acquire/: Cells.hs  Game.hs  Hotels.hs  IO.hs  Interpreter.hs  Net.hs  Player.hs  Pretty.hs  Tiles.hs
backend-protocol/: backend-protocol.idr  backend-protocol.ipkg
backend-protocol/GameServer/Protocol/: Binary.idr  Messages.idr  Mock.idr  Options.idr  State.idr  Tester.idr
bautzen1945/: .gitignore  bautzen1945.css  elm.json  index.html  subway.idr
bautzen1945/assets/: carte.idraw
bautzen1945/game-server/: game-server.cabal  package.yaml  tcr
bautzen1945/game-server/src/: GameServer.hs
bautzen1945/idris/: Bautzen.idr  Echo.idr  README.md  bautzen1945.idr  bautzen1945.ipkg  command-flow.plantuml  idris_net.dylib  libidris2_support.dylib  main.ss  subway.idr  test.idr
bautzen1945/idris/Bautzen/: Client.idr  Combats.idr  Dice.idr  Game.idr  GameUnit.idr  Games.idr  Id.idr  Network.idr  Odds.idr  Options.idr  Pos.idr  REPL.idr  SExp.idr  Server.idr  Stacking.idr  Store.idr  Terrain.idr  ZoC.idr
bautzen1945/idris/Data/: Array.idr  Binary.idr  Fun.idr  Heap.idr  Positive.idr  Sign.idr  SortedMap.idr  ZZ.idr
bautzen1945/idris/Decidable/: Decidable.idr  Order.idr
bautzen1945/src/: Game.elm
bautzen1945/tests/: GameTest.elm
chinese/: chinese.cabal  stack.yaml
chinese/data/: hsk2.zh
chinese/main/: Main.hs
chinese/src/Chinese/: Dictionary.hs  Game.hs  Interpreter.hs  Message.hs  Player.hs  Pretty.hs
der-des-ders/: Cargo.toml  selfplay.sh
der-des-ders/src/: engine.rs  event.rs  events.rs  fixtures.rs  io.rs  logic.rs  main.rs  minimax.rs  robot.rs  side.rs  state.rs  tech.rs
empires/: LICENSE  README.md  empires.cabal
empires/src/: Empires.hs
game-server/: ChangeLog.md  game-server.cabal  package.yaml
game-server/app/: Main.hs
game-server/public/: index.html
game-server/src/: GameServer.hs
game-server/test/: GameServerSpec.hs
main/: Main.hs
pacific-war/: CLAUDE.md  PacWarCoreRulesFinal.txt
pacific-war/pacific-war/: .dockerignore  Cargo.toml  Dockerfile  E2E_TESTS.md  Rocket.toml  docker-compose.e2e.yml  package.sh
pacific-war/pacific-war/migrations/: 20250101000000_initial_schema.sql
pacific-war/pacific-war/scripts/: README.md  run-e2e-tests.sh  setup-macos-containers.sh
pacific-war/pacific-war/src/: core.rs  lib.rs  main.rs  util.rs
pacific-war/pacific-war/src/persistence/: cached.rs  in_memory.rs  mod.rs  postgres.rs
pacific-war/pacific-war/static/: pacific.css
pacific-war/pacific-war/templates/: battle.html.hbs  contact.html.hbs  index.html.hbs  phase.html.hbs  reaction_activation.html.hbs  strategic_phase.html.hbs
pacific-war/pacific-war/templates/battle_cycle/: advantage_determination.html.hbs  advantage_movement.html.hbs  bombardment.html.hbs  common.html.hbs  deactivation.html.hbs  default.html.hbs  demolition.html.hbs  lighting.html.hbs  movement.html.hbs  naval_combat.html.hbs  naval_combat_determination.html.hbs  rally.html.hbs
pacific-war/pacific-war/templates/battle_cycle/rules/: advantage_determination.html.hbs  bombardment.html.hbs  deactivation.html.hbs  demolition.html.hbs  lighting.html.hbs  rally.html.hbs
pacific-war/pacific-war/tests/: e2e_test.rs  random_walk_test.rs  web.rs
pacific-war/www/: index.js  package-lock.json  package.json  webpack.config.js
public/: index.html
public/src/: Messages.elm
public/tests/: Example.elm
republic-of-rome/: ChangeLog.md  README.md  package.yaml  republic-of-rome.cabal
server/: package.yaml
server/src/: Messages.hs  client.hs  server.hs
src/: Cells.hs  Game.hs  Hotels.hs  IO.hs  Interpreter.hs  Main.hs  Net.hs  Player.hs  Pretty.hs  Robot.hs  Tiles.hs  Trace.hs
src/Acquire/: Cells.hs  Hotels.hs  Player.hs  Robot.hs
src/Game/: Core.hs  Play.hs  Turn.hs  Types.hs
src/Net/: Client.hs  Game.hs  Player.hs  Server.hs  Types.hs
ui/: .gitignore  acquire.css  elm-package.json  elm.json  index.html
ui/src/: Acquire.elm  Messages.elm  Model.elm  View.elm
ui/tests/: Example.elm
(+76 files in other folders)
