[package]
name = "pacific-war"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
rocket = { version = "0.5.1", features = ["json"]}
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars", "tera", "minijinja"]}
serde = { version = "1.0", features = ["derive"] }
chrono = { version= "0.4.38", features = ["serde"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
