[package]
name = "pacific-war"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
rocket = { version = "0.5.1", features = ["json"]}
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars", "tera", "minijinja"]}
serde = { version = "1.0", features = ["derive"] }
chrono = { version= "0.4.38", features = ["serde"]}
fastrand = "2.1.0"
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "uuid",
    "chrono",
    "migrate"
] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "macros"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]
